force-app/main/default/objects/Contact/fields/AlgunaVezRegalo__c.field-meta.xml
<CustomField>
    <fullName>AlgunaVezRegalo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alguna vez ha participado en la Campaña</label>
    <type>Checkbox</type>
</CustomField>