force-app/main/default/objects/Contact/fields/Campaing__c.field-meta.xml
<CustomField>
    <fullName>Campaing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaing__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>