force-app/main/default/objects/Contact/fields/CLAVENEGOCIO__c.field-meta.xml
<CustomField>
    <fullName>CLAVENEGOCIO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clave Negocio</label>
    <type>Checkbox</type>
</CustomField>