force-app/main/default/objects/Contact/fields/Confirmacion_Envio__c.field-meta.xml
<CustomField>
    <fullName>Confirmacion_Envio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmación Envío</label>
    <type>Checkbox</type>
</CustomField>