force-app/main/default/objects/Contact/fields/Contacto_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Id_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacto Id 18</label>
    <type>Text</type>
</CustomField>