force-app/main/default/objects/Contact/fields/Contacto_Midmarket__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Midmarket__c</fullName>
    <label>Contacto Midmarket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calidad</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Compras</fullName>
            </value>
            <value>
                <fullName>Documentación</fullName>
            </value>
            <value>
                <fullName>Financiero</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Gestión Mtto. ERP</fullName>
            </value>
            <value>
                <fullName>Gestión Mtto. ING</fullName>
            </value>
            <value>
                <fullName>Gestión Mtto. MES</fullName>
            </value>
            <value>
                <fullName>I+D+i</fullName>
            </value>
            <value>
                <fullName>Ingeniería-Eléctrica</fullName>
            </value>
            <value>
                <fullName>Ingeniería-Electrónica</fullName>
            </value>
            <value>
                <fullName>Ingeniería-Mecánica</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Logística-ERP/Almacen</fullName>
            </value>
            <value>
                <fullName>Logística-MES</fullName>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Montaje</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Procesos</fullName>
            </value>
            <value>
                <fullName>Producción</fullName>
            </value>
            <value>
                <fullName>Programador CNC</fullName>
            </value>
            <value>
                <fullName>Propietario</fullName>
            </value>
            <value>
                <fullName>Proyectos</fullName>
            </value>
            <value>
                <fullName>RRHH</fullName>
            </value>
            <value>
                <fullName>SAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>