force-app/main/default/objects/Contact/fields/Correo_electronico_secundario__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_secundario__c</fullName>
    <label>Correo electrónico secundario</label>
    <type>Email</type>
</CustomField>