force-app/main/default/objects/Contact/fields/DireccionRegalo__c.field-meta.xml
<CustomField>
    <fullName>DireccionRegalo__c</fullName>
    <label>Dirección envió regalo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dirección Cliente</fullName>
            </value>
            <value>
                <fullName>Dirección Profesional</fullName>
            </value>
            <value>
                <fullName>Dirección Alternativa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>