force-app/main/default/objects/Contact/fields/Enviar_Correo__c.field-meta.xml
<CustomField>
    <fullName>Enviar_Correo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking the box indicates that no mail will be sent to the Contact</inlineHelpText>
    <label>No Enviar Correo</label>
    <type>Checkbox</type>
</CustomField>