force-app/main/default/objects/Contact/fields/Enviar_Email__c.field-meta.xml
<CustomField>
    <fullName>Enviar_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Al marcar la casilla se indica que no se envía email al Contacto</inlineHelpText>
    <label>No Enviar Email</label>
    <type>Checkbox</type>
</CustomField>