force-app/main/default/objects/Contact/fields/Envio__c.field-meta.xml
<CustomField>
    <fullName>Envio__c</fullName>
    <label>Envío</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>