force-app/main/default/objects/Contact/fields/EQUIPOPPAL__c.field-meta.xml
<CustomField>
    <fullName>EQUIPOPPAL__c</fullName>
    <label>EQUIPOPPAL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>