force-app/main/default/objects/Contact/fields/GUIDCONTACTO__c.field-meta.xml
<CustomField>
    <fullName>GUIDCONTACTO__c</fullName>
    <label>GUIDCONTACTO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>