force-app/main/default/objects/Contact/fields/IDCTO__c.field-meta.xml
<CustomField>
    <fullName>IDCTO__c</fullName>
    <label>Id Contacto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>