force-app/main/default/objects/Contact/fields/Inactivo__c.field-meta.xml
<CustomField>
    <fullName>Inactivo__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Al marcar la casilla indica que el contacto no está activo</inlineHelpText>
    <label>Inactivo</label>
    <type>Checkbox</type>
</CustomField>