force-app/main/default/objects/Contact/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>Act-On Behavior Score</description>
    <label>Lead Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>