force-app/main/default/objects/Contact/fields/NIVEL__c.field-meta.xml
<CustomField>
    <fullName>NIVEL__c</fullName>
    <label>Nivel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consejo Admón. y Altos Cargos</fullName>
            </value>
            <value>
                <fullName>Dirección General</fullName>
            </value>
            <value>
                <fullName>Subdirección General</fullName>
            </value>
            <value>
                <fullName>Directores y Subdir de Función</fullName>
            </value>
            <value>
                <fullName>Responsables de Departamento</fullName>
            </value>
            <value>
                <fullName>Cargos del Dpto. Informática</fullName>
            </value>
            <value>
                <fullName>Desconocido</fullName>
            </value>
            <value>
                <fullName>Otros cargos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>