force-app/main/default/objects/Contact/fields/Observaciones_Campanya__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_Campanya__c</fullName>
    <label>Observaciones Campaña</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>