force-app/main/default/objects/Contact/fields/PERFIL__c.field-meta.xml
<CustomField>
    <fullName>PERFIL__c</fullName>
    <label>Perfil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desconocido</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Usuario</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>