force-app/main/default/objects/Contact/fields/Perfil_MKT_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Perfil_MKT_Cuenta__c</fullName>
    <formula>TEXT(Account.Perfil_MKT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil_MKT_Cuenta</label>
    <type>Text</type>
</CustomField>