force-app/main/default/objects/Contact/fields/Promotores__c.field-meta.xml
<CustomField>
    <fullName>Promotores__c</fullName>
    <label>Promotores</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>José Luis Manzanares Japón</fullName>
            </value>
            <value>
                <fullName>José Luis Manzanares Abásolo</fullName>
            </value>
            <value>
                <fullName>Rosalío Alonso Peces</fullName>
            </value>
            <value>
                <fullName>Germán del Real</fullName>
            </value>
            <value>
                <fullName>Ignacio Hinojosa</fullName>
            </value>
            <value>
                <fullName>José Antonio García Bermudo</fullName>
            </value>
            <value>
                <fullName>Joseba Inchaurraga</fullName>
            </value>
            <value>
                <fullName>Juan de Cea Garcia</fullName>
            </value>
            <value>
                <fullName>Luis Castillo</fullName>
            </value>
            <value>
                <fullName>Rafael Fernández Cantillana</fullName>
            </value>
            <value>
                <fullName>Stefan Pardo Kolesch</fullName>
            </value>
            <value>
                <fullName>Juan de Dios Hermosin</fullName>
            </value>
            <value>
                <fullName>Francisco Ruiz Ruiseño Riera</fullName>
            </value>
            <value>
                <fullName>Jose Bores Borrero</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>