force-app/main/default/objects/Contact/fields/Provincia_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Provincia_Cuenta__c</fullName>
    <formula>Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia Cuenta</label>
    <type>Text</type>
</CustomField>