force-app/main/default/objects/Contact/fields/RegaloAnyoPasado__c.field-meta.xml
<CustomField>
    <fullName>RegaloAnyoPasado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaña de Navidad año pasado</label>
    <type>Checkbox</type>
</CustomField>