force-app/main/default/objects/Contact/fields/RegaloEsteAnyo__c.field-meta.xml
<CustomField>
    <fullName>RegaloEsteAnyo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campaña Navidad este año</label>
    <type>Checkbox</type>
</CustomField>