force-app/main/default/objects/Contact/fields/Sector_IB_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Sector_IB_Cuenta__c</fullName>
    <formula>Account.Sector_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sector IB Cuenta</label>
    <type>Text</type>
</CustomField>