force-app/main/default/objects/Contact/fields/SUBNIVEL__c.field-meta.xml
<CustomField>
    <fullName>SUBNIVEL__c</fullName>
    <label>Subnivel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NIVEL__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Presidente</fullName>
            </value>
            <value>
                <fullName>Vicepresidente</fullName>
            </value>
            <value>
                <fullName>Consejero Delegado</fullName>
            </value>
            <value>
                <fullName>Máximo responsable de la Administración</fullName>
            </value>
            <value>
                <fullName>Ministros</fullName>
            </value>
            <value>
                <fullName>Rector</fullName>
            </value>
            <value>
                <fullName>Vicerrector</fullName>
            </value>
            <value>
                <fullName>Otros altos cargos</fullName>
            </value>
            <value>
                <fullName>Director General</fullName>
            </value>
            <value>
                <fullName>Director General Adjunto</fullName>
            </value>
            <value>
                <fullName>Consejeros de Comunidades Autónomas</fullName>
            </value>
            <value>
                <fullName>Diputados</fullName>
            </value>
            <value>
                <fullName>Concejales</fullName>
            </value>
            <value>
                <fullName>Decanos</fullName>
            </value>
            <value>
                <fullName>Subdirector General</fullName>
            </value>
            <value>
                <fullName>Subdirector General Adjunto</fullName>
            </value>
            <value>
                <fullName>Viceconsejeros</fullName>
            </value>
            <value>
                <fullName>Vicedecano</fullName>
            </value>
            <value>
                <fullName>Director de Función</fullName>
            </value>
            <value>
                <fullName>Director adjunto a la función</fullName>
            </value>
            <value>
                <fullName>Director de Organización y Sistemas</fullName>
            </value>
            <value>
                <fullName>Director de Recursos Humanos</fullName>
            </value>
            <value>
                <fullName>Director Económico-Financiero</fullName>
            </value>
            <value>
                <fullName>Subdirector de Función</fullName>
            </value>
            <value>
                <fullName>Responsable de departamento</fullName>
            </value>
            <value>
                <fullName>Responsable de CAD</fullName>
            </value>
            <value>
                <fullName>Responsable de Organización y Sistemas</fullName>
            </value>
            <value>
                <fullName>Responsable de Recursos Humanos</fullName>
            </value>
            <value>
                <fullName>Responsable Económico-Financiero</fullName>
            </value>
            <value>
                <fullName>Responsable de desarrollo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>