force-app/main/default/objects/Contact/fields/Subsector_Ib_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Subsector_Ib_Cuenta__c</fullName>
    <formula>Account.Subsector_texto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsector Ib Cuenta</label>
    <type>Text</type>
</CustomField>