force-app/main/default/objects/Contact/validationRules/Campo_Nivel_Subnivel_IB.validationRule-meta.xml
<ValidationRule>
    <fullName>Campo_Nivel_Subnivel_IB</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				$Profile.Name =&apos;Usuario Ibermatica Latam&apos;,
				$Profile.Name = &apos;Usuario Ibermatica Large Account&apos;,
				ISPICKVAL(NIVEL__c,&apos;&apos;) 
)</errorConditionFormula>
    <errorDisplayField>NIVEL__c</errorDisplayField>
    <errorMessage>Debe informar el Nivel y Subnivel</errorMessage>
</ValidationRule>