force-app/main/default/objects/Contact/validationRules/Nombre_Contacto.validationRule-meta.xml
<ValidationRule>
    <fullName>Nombre_Contacto</fullName>
    <active>true</active>
    <errorConditionFormula>FirstName = null</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Debe informar el Nombre del Contacto</errorMessage>
</ValidationRule>