force-app/main/default/objects/Contact/listViews/Contactos_de_mis_cuentas.listView-meta.xml
<ListView>
    <fullName>Contactos_de_mis_cuentas</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>$USER</value>
    </filters>
    <label>Contactos de mis cuentas</label>
</ListView>