force-app/main/default/objects/Contact/listViews/Mis_Contactos.listView-meta.xml
<ListView>
    <fullName>Mis_Contactos</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Contactos</label>
</ListView>